--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
 name: ci
-
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  push: { branches: [ main ] }
+  pull_request: { branches: [ main ] }
 
 jobs:
   lint:
@@ -17,7 +14,5 @@ jobs:
           python-version: "3.10"
       - run: |
           python -m pip install --upgrade pip
-          pip install flake8 black
-      - run: flake8 .
+          pip install black
       - run: black --check .
-
