--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,19 @@
-name: ci
+name: CI
+
 on:
   pull_request:
-  push:
     branches: [ main ]
+
 jobs:
   lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-      - run: python -m pip install -r requirements.txt || true
-      - run: python -m py_compile $(git ls-files '*.py') || true
+          python-version: "3.10"
+      - run: python -m pip install --upgrade pip
+      - run: pip install black flake8
+      - run: black --check .
+      - run: flake8 .
